--- a/FrontEnd/css/Home_header.css
+++ b/FrontEnd/css/Home_header.css
@@ -25,7 +25,8 @@ body {
 /* Thanh top nhỏ */
 
 .top-bar {
-  width: 100%;
+  margin-left: 250px;
+  width: 70%;
   overflow: hidden;
   white-space: nowrap;
    background: linear-gradient(to bottom, #6c3483, #512e5f);
@@ -37,8 +38,8 @@ body {
 
 .top-bar-content {
   display: inline-block;
-  padding-left: 100%;
-  animation: marquee 15s linear infinite;
+  padding-left: 80%;
+  animation: marquee 20s linear infinite;
 }
 
 @keyframes marquee {
@@ -51,8 +52,10 @@ body {
   display: flex;
   align-items: center;
   justify-content: space-around;
-  padding: 10px 20px;
+  padding: 20px 20px;
   gap: 15px;
+  margin-left: 50px;
+  margin-right: 50px;
 }
 
 /* Logo */
@@ -61,7 +64,6 @@ body {
   font-weight: bold;
 }
 .logo-s {
-  background: white;
   color: red;
   padding: 0 5px;
   border-radius: 4px;
@@ -77,6 +79,13 @@ body {
   border-radius: 6px;
   cursor: pointer;
   display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
+.btn a{
+  color: white;
+  border-radius: 6px;
   align-items: center;
   gap: 5px;
 }
@@ -112,6 +121,14 @@ body {
 }
 .cart i {
   font-size: 18px;
+}
+.cart a{
+  color: white;
+  border-radius: 6px;
+  align-items: center;
+  gap: 5px;
+  background: rgba(255,255,255,0.2);
+  padding: 5px 10px;
 }
 
 /* Login */
