--- a/FrontEnd/css/LoginClient.css
+++ b/FrontEnd/css/LoginClient.css
@@ -45,7 +45,7 @@ body {
 .login-container button {
   width: 100%;
   padding: 12px;
-  background: #0984e3;
+  background: red;
   border: none;
   color: #fff;
   font-size: 16px;
