--- a/FrontEnd/css/Home_section_one.css
+++ b/FrontEnd/css/Home_section_one.css
@@ -1,20 +1,70 @@
 .section-one{
     margin-left: 290px;
-    width: 70%;
-    margin-top : 10px;
+    width: 1300px;
+    margin-top : 3px;
 }
 
 .section-one .section-one-content{
     display: flex;
-    justify-content: space-between;
-    align-items: center;
+    width:100%;
+    height: auto;
 }
 .section-one .section-one-content .section-one-left{
     display :flex;
     flex-direction: column;
+    justify-content: space-between;
+    height:400px;
     gap:5px;
+    margin-right: 5px;
 }
 .section-one .section-one-content .section-one-left img{
+    height: 33%;
     border-radius: 3px ;
-    border: 2px;
+    border: 1px solid black;
+}
+
+.section-one .section-one-content .section-one-right{
+    height:405px;
+    width: 1090px;
+    overflow: hidden;
+    position: relative;
+}
+.section-one .section-one-content .section-one-right .list-slides{
+    height:100%;
+    width:auto;
+    display: flex;
+    overflow: hidden;
+    transition: transform 0.5s ;
+}
+.section-one .section-one-content .section-one-right .list-slides img{
+    width: 1090px;
+    height: auto;
+    border-radius: 2px ;
+    flex-shrink: 0;
+}
+
+.slider-controls {
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  transform: translateY(-50%);
+  pointer-events: none;
+  z-index: 10;
+}
+.slider-btn {
+  background: none;
+  color: #fff;
+  border: none;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  font-size: 20px;
+  cursor: pointer;
+  pointer-events: auto;
+}
+.slider-btn:hover {
+  background: rgba(108,52,131,1);
 }
