--- a/FrontEnd/css/Home_section_two.css
+++ b/FrontEnd/css/Home_section_two.css
@@ -7,23 +7,23 @@
 
 .section-two .top{
 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: 10px;
-    color: black;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 10px;
+  color: black;
 }
 
 .section-two .top .top-content{
-    width: 20%;
-    font-size: 20px;
-    font-weight: 600;
+  width: 20%;
+  font-size: 20px;
+  font-weight: 600;
 }
 .section-two .top .top-list{
-    display: flex;
-    gap: 15px;
-    width: 82%;
-    justify-content: space-between;
+  display: flex;
+  gap: 15px;
+  width: 82%;
+  justify-content: space-between;
 }
 .section-two .top .top-list a{
     display: inline-block;
@@ -37,10 +37,9 @@
     text-align: center;
 }
 .section-two .top .top-list a:hover{
-    background: rgb(66, 153, 120);
+    background: rgb(129, 36, 125);
+    border: solid 1px rgb(202, 17, 110);
 }
-
-
 
 
 
@@ -76,26 +75,27 @@
   overflow: hidden;
 }
 .section-two .list-products .product a:hover img{
-  transform: scale(1.2);
+  transform: scale(1.1);
+  border-radius: 12px;
 }
 
 
 .product img {
+  padding:10px;
   width: 198px;
-  height: 200px;
+  height: 220px;
   object-fit: cover;
   border-radius: 12px;
-  margin-bottom: 5px;
+  margin-bottom: 17px;
   transition: transform 0.5s ease;
   overflow: hidden;
 }
 
 .product img:hover{
-  width: 198px;
-  height: 200px;
   object-fit: cover;
+  overflow: hidden;
   border-radius: 12px;
-  margin-bottom: 12px;
+
 }
 
 .product-name {
@@ -110,7 +110,7 @@
   display : flex;
   justify-content: space-between;
   font-size: 13px;
-  color: #555;
+  color: #0f22ce;
   margin-bottom: 3px;
   text-align: left;
 }
@@ -121,39 +121,46 @@
   font-weight: 500;
   color:red;
 }
+.product-describe-button:hover{
+  background: rgb(196, 128, 190);
+  color: black;
+}
+
+
+.product-desscribe-text{
+  font-size: 11.5px;
+  color: rgb(25, 23, 141);
+  background: #c4ebe7;
+  margin-top: 4px;
+  text-align:left;
+  padding: 2px;
+  height: auto;
+  border: 1px solid #80346d;
+  border-radius: 8px;
+}
 
 .product-price {
-  font-size: 1.15rem;
+  font-size: 20px;
   color: #d63031;
   font-weight: bold;
   margin-bottom: 8px;
-  text-align: center;
+  text-align: left;
 }
 
-.add-cart {
-  background: #6c3483;
-  color: #fff;
+.product-phone {
+  width : 100%;
   border: none;
   border-radius: 8px;
   padding: 7px 18px;
   font-size: 1rem;
   cursor: pointer;
-  margin-top: 8px;
+  margin-top: 4px;
   transition: background 0.2s;
+  border: 1px solid #80346d;
+  color: black;
+  font-weight: 300;
 }
 
-.add-cart:hover {
-  background: #512e5f;
-}
-
-.product .fav {
-  color: #6c3483;
-  font-size: 1.05rem;
-  position: absolute;
-  bottom: 12px;
-  left: 50%;
-  transform: translateX(-50%);
-  display: flex;
-  align-items: center;
-  gap: 4px;
+.product-phone:hover {
+  color: rgb(238, 85, 14);
 }
