--- a/FrontEnd/css/Home_section_two.css
+++ b/FrontEnd/css/Home_section_two.css
@@ -58,7 +58,7 @@
     box-shadow: 0 4px 16px rgba(108, 52, 131, 0.08);
     padding: 18px 16px 16px 16px;
     width: 18%;
-    height: 450px;
+    height: 470px;
     transition: box-shadow 0.3s;
     overflow: hidden;
 }
@@ -143,9 +143,11 @@
   font-size: 20px;
   color: #d63031;
   font-weight: bold;
+  margin-top: 8px;
   margin-bottom: 8px;
   text-align: left;
 }
+
 
 .product-phone {
   width : 100%;
@@ -163,4 +165,27 @@
 
 .product-phone:hover {
   color: rgb(238, 85, 14);
+}
+
+
+/*  phân tranh cho trang web */
+.pagination {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin: 24px 0;
+}
+.pagination button {
+  padding: 6px 12px;
+  border: none;
+  background: #eee;
+  border-radius: 50%;
+  cursor: pointer;
+  font-size: 1rem;
+}
+.pagination .active-page {
+  background: #6c3483;
+  color: #fff;
+  font-weight: bold;
 }
