--- a/FrontEnd/css/Home_section_two.css
+++ b/FrontEnd/css/Home_section_two.css
@@ -106,7 +106,7 @@
   text-align: center;
 }
 
-.product-describe {
+.configuration-product{
   display : flex;
   justify-content: space-between;
   font-size: 13px;
@@ -114,20 +114,20 @@
   margin-bottom: 3px;
   text-align: left;
 }
-.product-describe-button{
+.configuration-product-button{
   border: solid 1px rgb(88, 24, 104);
   border-radius: 7px;
   padding: 2px 6px;
   font-weight: 500;
   color:red;
 }
-.product-describe-button:hover{
+.configuration-product-button:hover{
   background: rgb(196, 128, 190);
   color: black;
 }
 
 
-.product-desscribe-text{
+.describe-product{
   font-size: 11.5px;
   color: rgb(25, 23, 141);
   background: #c4ebe7;
@@ -139,7 +139,7 @@
   border-radius: 8px;
 }
 
-.product-price {
+.price-product {
   font-size: 20px;
   color: #d63031;
   font-weight: bold;
