--- a/FrontEnd/css/Home_footer.css
+++ b/FrontEnd/css/Home_footer.css
@@ -5,7 +5,7 @@
     padding-top:20px;
     font-size: 14px;
     color: white;
-    margin-left: -290px;
-    width: 1910px;
+    /* margin-left: -290px; */
+    width: 100%;
     height: 50px;
 }
