--- a/FrontEnd/css/Home_section_three.css
+++ b/FrontEnd/css/Home_section_three.css
@@ -1,11 +1,9 @@
 .section-three{
-    margin-left: -290px;
     margin-top: 25px;
-    width: 1910px;
+    width: 100%;
     height: auto;
     background-color: #dedee0;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0,0.2);
-    border-radius: 10px;
     padding: 20px;
 }
 
