them bo loc cho san pham

--- a/FrontEnd/css/Home_section_two.css
+++ b/FrontEnd/css/Home_section_two.css
@@ -55,7 +55,7 @@
   margin-top:12px;
   width: 20%;
   margin-right: 20px;
-  border: solid 1px rgb(88, 24, 104);
+  /* border: solid 1px rgb(88, 24, 104); */
   height: 50%;
   border-radius: 12px;
 }
@@ -87,7 +87,7 @@
 .section-two .content .filter .filter-list .filter-list-box{
   border: solid 1px rgb(88, 24, 104);
   border-radius: 7px;
-  padding: 5px 10px;
+  padding: 10px 10px;
   width: 100%;
   cursor: pointer;
   text-align: left;
@@ -146,6 +146,19 @@
 }
 .section-two .content .filter-list-box-menu2 ul li:hover{
   background: rgb(212, 224, 219);
+}
+
+
+.section-two .content .news{
+  margin-top:12px;
+  height: 236px;
+  border-radius: 12px;
+}
+.section-two .content .news img{
+  width:220px;
+  height: 470px;
+  border-radius: 12px;
+  margin-left: 10px;
 }
 
 
@@ -225,6 +238,7 @@
   color: #222;
   margin-bottom: 3px;
   text-align: center;
+  height: 42px;
 }
 
 .configuration-product{
