--- a/FrontEnd/css/Home_section_two.css
+++ b/FrontEnd/css/Home_section_two.css
@@ -169,9 +169,9 @@
 .section-two .list-products{
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
-    gap: 11px;
+    gap: 27px;
     margin-top: 10px;
     width:1150px;
 }
@@ -228,6 +228,7 @@
   color: #222;
   margin-bottom: 3px;
   text-align: center;
+  height: 42px;
 }
 
 .configuration-product{
