--- a/FrontEnd/css/Home_section_two.css
+++ b/FrontEnd/css/Home_section_two.css
@@ -46,19 +46,27 @@
 
 
 .section-two .content {
+  height: 976px;
   display:flex;
   flex-direction: row;
   justify-content: space-around;
 
 }
 
+.section-two .content .content-left{
+  width: 22%;
+  display:flex;
+  flex-direction: column;
+  /* border: solid 1px rgb(88, 24, 104); */
+  border-radius: 12px;
+}
+
 .section-two .content .filter{
   margin-top:12px;
-  width: 20%;
   margin-right: 20px;
   border: solid 1px rgb(88, 24, 104);
-  height: 50%;
   border-radius: 12px;
+  height:48%;
 }
 
 .section-two .content .filter .filter-top{
@@ -126,7 +134,7 @@
   cursor: pointer;
   text-align: center;
   height:auto;
-  margin-left: 214px;
+  margin-left: 217px;
 }
 
 .section-two .content .filter-list-box-menu2 ul{
@@ -151,6 +159,30 @@
   background: white;
 }
 
+
+.section-two .content .content-left .news{
+  width: 92%;
+  margin-top:20px;
+  border: solid 1px rgb(88, 24, 104);
+  border-radius: 12px;
+  height:48%;
+  display:flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.section-two .content .content-left .news .news-content{
+  background: rgb(200, 162, 221);
+  border: solid 1px rgb(88, 24, 104);
+  border-radius: 12px;
+  height: 30%;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 16px;
+  font-weight: 500;
+  color: black;
+}
 
 
 
