--- a/FrontEnd/css/Home_header.css
+++ b/FrontEnd/css/Home_header.css
@@ -12,6 +12,7 @@ body {
   background: #f5f5f5;
 }
 
+
 /* Header tổng */
 .navbar {
   width: 100%;
@@ -66,8 +67,9 @@ body {
 
 /* Logo */
 .logo {
-  font-size: 24px;
+  font-size: 27px;
   font-weight: bold;
+  color: orange;
 }
 .logo-s {
   color: #ffff;
@@ -79,7 +81,7 @@ body {
 /* Nút */
 .btn {
   background: linear-gradient(135deg, #6c3483, #512e5f);
-  border: none;
+  border: 1px solid rgb(218, 187, 130);
   color: white;
   padding: 8px 12px;
   border-radius: 6px;
@@ -101,7 +103,7 @@ body {
 
 .news-btn{
   background: linear-gradient(135deg, #6c3483, #512e5f);
-  border: none;
+  border: 1px solid rgb(218, 187, 130);
   color: white;
   padding: 8px 12px;
   border-radius: 6px;
@@ -147,6 +149,8 @@ body {
   align-items: center;
   gap: 5px;
   cursor: pointer;
+  border: 1px solid rgb(218, 187, 130);
+  border-radius: 6px;
 }
 
 
@@ -171,6 +175,11 @@ body {
 }
 .login:hover{
   background: rgba(255,255,255,0.2);
+}
+
+
+i{
+  color: rgb(218, 187, 130);
 }
 
 
