--- a/FrontEnd/css/Phone.css
+++ b/FrontEnd/css/Phone.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background: #f5f5f5;
+  background: #eedef0;
 }
 
 /* Header tổng */
@@ -147,57 +147,12 @@ body {
     margin-top : 3px;
 }
 
-.section-one .section-one-content{
-    display: flex;
-    width:100%;
-    height: auto;
-}
 
-.section-one .section-one-content .section-one-right{
-    height:500px;
-    width: 800px;
-    overflow: hidden;
-    position: relative;
-}
-.section-one .section-one-content .section-one-right .list-slides{
-    height:100%;
-    width:auto;
-    display: flex;
-    overflow: hidden;
-    transition: transform 0.5s ;
-}
-.section-one .section-one-content .section-one-right .list-slides img{
-    width: 800px;
-    height: auto;
-    border-radius: 4px ;
-    flex-shrink: 0;
-}
 
-.slider-controls {
-    position: absolute;
-    top: 50%;
-    left: 0;
-    width: 100%;
-    display: flex;
-    justify-content: space-between;
-    transform: translateY(-50%);
-    pointer-events: none;
-    z-index: 10;
-}
-.slider-btn {
-    background: none;
-    color: #fff;
-    border: none;
-    border-radius: 50%;
-    width: 40px;
-    height: 40px;
-    font-size: 20px;
-    cursor: pointer;
-    pointer-events: auto;
-}
-.slider-btn:hover {
-    background: rgba(108,52,131,1);
-}
+
+
+
+
 
 
 .content-phone{
@@ -211,62 +166,81 @@ body {
 
 
 
-.Shopping-Cart {
-  bottom: 10%;
-  left: 33%;
-}
 
-.cart-total {
-  /* margin-top: 10px;
-  font-size: 30px;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  gap: 10px; */
-
-}
 .cart-total i{
   font-size: 30px;
-  color: rgb(88, 24, 104);
+  color: rgb(196, 206, 105);
 }
 
 .cart-total .checkout-btn {
-  background: linear-gradient(135deg, #6c3483, #512e5f);
+  background: linear-gradient(135deg, #b6a0be, #512e5f);
   border: none;
   color: white;
   padding: 10px 20px;
   border-radius: 6px;
   cursor: pointer;
   font-size: 18px;
-  
-}
-.checkout-btn .active{
-  transform: translateY(10%);
+
 }
 
-.image{
-  width: 400px;
-  height:300px;
+
+
+.section-two{
+  display: flex;
+  gap: 20px;
 }
 
-.section-one .list-image{
+
+.section-two .list-image .main-image img{
+  width:515px;
+  border: #9e54bb 2px solid;
+  border-radius: 5px;
+  height:515px;
+  object-fit: cover;
+}
+
+.section-one .list-image .list-image-box{
   display:flex;
+  justify-content: space-between;
+  width:510px;
+  gap: 5px;
 }
-img{
-  width :100%;
-  height:100%;
+
+.section-one .list-image .list-image-box .image{ 
+  width: 100px;
+  height:75px;
+  border: 1px solid wheat;
+  border-radius: 5px;
 }
-.section-two .content-phone img{
-  width: 400px;
-  height:300px;
+
+.section-one .list-image .list-image-box .image img{ 
+  width: 100px;
+  height:75px;
+  cursor: pointer;
+  transition: all 0,8s;
+  border-radius: 5px;
 }
+
+.section-one .list-image .list-image-box .image:hover img { 
+  cursor: pointer;
+  transform: scale(1.1);
+}
+
 
 .section-two .content-phone {
   display:flex;
   flex-direction: row;
-  gap:5px;
+  gap:10px;
 }
 
+.section-two .content-phone .content-phone-right {
+  display: flex;
+  flex-direction: column;
+  gap:10px;
+}
+.section-two .content-phone .content-phone-right b{
+  color:rgb(228, 43, 43);
+}
 
 
 
