--- a/FrontEnd/css/Phone.css
+++ b/FrontEnd/css/Phone.css
@@ -67,6 +67,7 @@ body {
 .logo {
   font-size: 24px;
   font-weight: bold;
+  color: orange;
 }
 .logo-s {
   color: red;
@@ -142,6 +143,7 @@ body {
 }
 
 .section-one{
+    margin-top:20px;
     margin-left: 290px;
     width: 1300px;
     margin-top : 3px;
@@ -151,41 +153,8 @@ body {
 
 
 
-
-
-
-
-.content-phone{
-  display: flex;
-  flex-direction: column;
-  gap:10px;
-  margin-left: 20px;
-  font-size: 18px;
-  line-height: 1.6;
-}
-
-
-
-
-.cart-total i{
-  font-size: 30px;
-  color: rgb(196, 206, 105);
-}
-
-.cart-total .checkout-btn {
-  background: linear-gradient(135deg, #b6a0be, #512e5f);
-  border: none;
-  color: white;
-  padding: 10px 20px;
-  border-radius: 6px;
-  cursor: pointer;
-  font-size: 18px;
-
-}
-
-
-
 .section-two{
+  margin-top:20px;
   display: flex;
   gap: 20px;
 }
@@ -199,21 +168,21 @@ body {
   object-fit: cover;
 }
 
-.section-one .list-image .list-image-box{
+.section-two .list-image .list-image-box{
   display:flex;
   justify-content: space-between;
   width:510px;
   gap: 5px;
 }
 
-.section-one .list-image .list-image-box .image{ 
+.section-two .list-image .list-image-box .image{ 
   width: 100px;
   height:75px;
   border: 1px solid wheat;
   border-radius: 5px;
 }
 
-.section-one .list-image .list-image-box .image img{ 
+.section-two .list-image .list-image-box .image img{ 
   width: 100px;
   height:75px;
   cursor: pointer;
@@ -221,16 +190,19 @@ body {
   border-radius: 5px;
 }
 
-.section-one .list-image .list-image-box .image:hover img { 
+.section-two .list-image .list-image-box .image:hover img { 
   cursor: pointer;
   transform: scale(1.1);
 }
 
 
 .section-two .content-phone {
+  margin-left: 20px;
+  font-size: 18px;
+  line-height: 1.6;
   display:flex;
-  flex-direction: row;
-  gap:10px;
+  flex-direction: column;
+  gap:40px;
 }
 
 .section-two .content-phone .content-phone-right {
@@ -243,4 +215,30 @@ body {
 }
 
 
+.cart-total i{
+  font-size: 30px;
+  color: rgb(29, 223, 71);
+  cursor: pointer;
+}
 
+.cart-total .checkout-btn {
+
+  /* background: linear-gradient(135deg, #a24bc2, #3aa33a); */
+  border: none;
+  color: rgb(14, 1, 1);
+  padding: 10px 20px;
+  border: solid 1px rgb(73, 192, 43);
+  border-radius: 6px;
+  cursor: pointer;
+  font-size: 18px;
+  overflow: hidden;
+}
+.cart-total .checkout-btn:hover {
+  background: linear-gradient(135deg, #3aa33a, #ce9b0e);
+  color:rgb(248, 248, 246);
+}
+
+.cart-total i:hover .checkout-btn{
+  background: linear-gradient(135deg, #3aa33a, #ce9b0e);
+  color:rgb(248, 248, 246);
+}
