--- a/FrontEnd/css/LoginClient.css
+++ b/FrontEnd/css/LoginClient.css
@@ -1,6 +1,6 @@
 body {
   font-family: Arial, sans-serif;
-  background: linear-gradient(135deg, #6c3483, #512e5f);
+  background: linear-gradient(135deg, #ddc957, #512e5f);
   height: 100vh;
   margin: 0;
   display: flex;
