--- a/FrontEnd/css/Home_section_one.css
+++ b/FrontEnd/css/Home_section_one.css
@@ -13,15 +13,24 @@
     display :flex;
     flex-direction: column;
     justify-content: space-between;
-    height:400px;
+    height:402px;
     gap:5px;
     margin-right: 5px;
 }
-.section-one .section-one-content .section-one-left img{
-    height: 33%;
+
+
+.section-one .section-one-content .section-one-left a{
+    height: 33.3%;
     border-radius: 3px ;
     border: 1px solid black;
 }
+.section-one .section-one-content .section-one-left a img{
+    width: 100%;
+    height: 100%;
+    border-radius: 3px ;
+    object-fit: cover;
+}
+
 
 .section-one .section-one-content .section-one-right{
     height:405px;
