--- a/FrontEnd/css/Home_section_two.css
+++ b/FrontEnd/css/Home_section_two.css
@@ -36,11 +36,13 @@
     border: solid 1px rgb(88, 24, 104);
     text-align: center;
     cursor: pointer;
+    transition: all 0.3s ease;
 }
 .section-two .top .top-list .top-list-box:hover{
     background: rgb(129, 36, 125);
     border: solid 1px rgb(202, 17, 110);
     color: white;
+    transform: matrix(1.05, 0, 0, 1.05, 0, 0);
 }
 
 
@@ -163,7 +165,6 @@
 .section-two .content .content-left .news{
   width: 92%;
   margin-top:20px;
-  border: solid 1px rgb(88, 24, 104);
   border-radius: 12px;
   height:48%;
   display:flex;
@@ -171,9 +172,8 @@
   justify-content: space-between;
 }
 
-.section-two .content .content-left .news .news-content{
+.section-two .content .content-left .news a{
   background: rgb(200, 162, 221);
-  border: solid 1px rgb(88, 24, 104);
   border-radius: 12px;
   height: 30%;
   display:flex;
@@ -185,6 +185,25 @@
 }
 
 
+
+.section-two .content .content-left .news a img{
+  background: rgb(200, 162, 221);
+  border: solid 1px rgb(88, 24, 104);
+  border-radius: 12px;
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+  font-size: 16px;
+  font-weight: 500;
+  color: black;
+  transition: cubic-bezier(0.075, 0.82, 0.165, 1) 0.5s;
+}
+
+.section-two .content .content-left .news a img:hover{
+  transform: scale(1.05); 
+  border-radius: 12px;
+
+}
 
 
 
