--- a/FrontEnd/css/News.css
+++ b/FrontEnd/css/News.css
@@ -26,3 +26,32 @@
 .news-detail .news-detail-content p{
     text-align: left;
 }
+
+.product-more{
+    margin-top: 10px;
+    width: 400px;
+    height: 40px;
+    line-height: 40px;
+    text-align: center;
+    background-color: rgb(129, 36, 125);
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+    border-radius: 8px;
+    margin-bottom: 20px;
+    cursor: pointer;
+    transition: 0.3s;
+    margin-left: 690px;
+}
+.product-more:hover{
+    background-color: rgb(30, 158, 87);
+}
+
+.product-more a{
+    text-decoration: none;
+    color: white;
+    display:inline-block;
+    width: 100%;
+    height: 100%;
+    line-height: 40px;
+}
