--- a/FrontEnd/css/Carts.css
+++ b/FrontEnd/css/Carts.css
@@ -1,27 +1,43 @@
 .section-one{
     height: 700px;
+    display:flex;
 }
 
 
 .list-carts{
-    display:flex;
-    flex-direction: column;
-    
+    width: 50%;
+    margin-right: 20px;
 }
 
 .list-carts table tr td{
     text-align: left;
 }
+
+
+.section-one table{
+    width: 100%;
+    text-align: left;
+    margin-top: 20px;
+    margin-left: 50px;
+    border: 1px solid ;
+    border-collapse: collapse;
+}
+
 img{
     width: 100px;
     height: 100px;
 }
 
-table{
-    width: 50%;
-    text-align: left;
-    margin-top: 20px;
-    margin-left: 50px;
+.list-carts table thead{
+    color:rgb(8, 8, 8);
+    font-size: 16px;
+}
+.list-carts table thead th{
+    border: 1px solid;
+}
+.list-carts table td{
+    border: 1px solid;
+    padding:5px;
 }
 
 button{
@@ -35,4 +51,52 @@ button{
 button:hover{
     background-color: #42b468;
     color: white;
+}
+
+.sum-money{
+    margin-top: 10px;
+    border: 1px solid green;
+    border-radius: 7px;
+    width: 300px;
+    padding: 5px;
+    color: red;
+    margin-left: 705px;
+}
+.sum-money:hover{
+    margin-top: 10px;
+    border: 1px solid rgb(19, 0, 128);
+    background:#42b468;
+    border-radius: 7px;
+    width: 300px;
+    padding: 5px;
+    color: rgb(245, 239, 239);
+    margin-left: 705px;
+}
+
+
+.section-one .information_cart{
+    width :40%;
+    margin-left: 20px;
+}
+
+.section-one .information_cart table{
+    border: none;
+}
+
+.section-one .information_cart tr{
+    margin: 10px;
+}
+.section-one .information_cart table tr td {
+    padding:10px;
+}
+
+.section-one .information_cart table tr td input{
+    border-radius: 10px;
+    border:  1px solid #42b468;
+    width: 100%;
+    height: 25px;
+}
+
+.order-button{
+    margin-left: 50px;
 }
