--- a/FrontEnd/css/Carts.css
+++ b/FrontEnd/css/Carts.css
@@ -30,13 +30,11 @@ img{
     height: 100px;
 }
 
-.list-carts .list-carts table thead{
+.list-carts .list-carts table thead th{
     color:rgb(8, 8, 8);
     font-size: 16px;
 }
-.list-carts table thead th{
-    /* border: 1px solid; */
-}
+
 .list-carts table td{
     /* border: 1px solid; */
     padding:5px;
@@ -79,6 +77,7 @@ button:hover{
 .section-one .information_cart{
     margin-top:20px;
     width :35%;
+    height: 600px;
     margin-left: 100px;
     border :#42b468 2px solid;
     border-radius: 10px;
@@ -105,4 +104,12 @@ button:hover{
 
 .order-button{
     margin-left: 50px;
+}
+
+
+select{
+    color: red;
+    border: 1px solid rgb(77, 224, 77);
+    border-radius: 10px;
+    height: 25px;
 }
