--- a/FrontEnd/css/Carts.css
+++ b/FrontEnd/css/Carts.css
@@ -7,6 +7,7 @@
 .list-carts{
     width: 50%;
     margin-right: 20px;
+    position: relative;
 }
 
 .list-carts table tr td{
@@ -55,36 +56,61 @@ button:hover{
 
 .sum-money{
     margin-top: 10px;
-    border: 1px solid green;
+    border: 1px solid rgb(192, 15, 54);
     border-radius: 7px;
-    width: 300px;
+    width: 150px;
     padding: 5px;
     color: red;
-    margin-left: 705px;
+    /* margin-left: 705px; */
 }
 .sum-money:hover{
     margin-top: 10px;
     border: 1px solid rgb(19, 0, 128);
-    background:#42b468;
-    border-radius: 7px;
-    width: 300px;
-    padding: 5px;
+    background:#e41224;
     color: rgb(245, 239, 239);
-    margin-left: 705px;
+    /* margin-left: 705px; */
 }
+
+
+.add_product{
+    position: absolute;
+    top: 580px;
+    left: 802px;
+    border: 1px solid rgb(204, 45, 66);
+    border-radius: 7px;
+    width: 200px;
+    padding: 5px;
+    color: red;
+    background: white;
+}
+
+.add_product:hover{
+    border: 1px solid rgb(19, 0, 128);
+    background:#e41224;
+    color: rgb(245, 239, 239)
+}
+
+.add_product:hover a{
+    color: rgb(245, 239, 239)   
+}
+
+
 
 
 .section-one .information_cart{
     margin-top:20px;
     width :35%;
-    height: 600px;
+    height: 500px;
     margin-left: 100px;
-    border :#42b468 2px solid;
-    border-radius: 10px;
+    position: relative;
 }
 
 .section-one .information_cart table{
     border: none;
+    width :100%;
+    height: 550px;
+    border :#42b468 2px solid;
+    border-radius: 10px;
 }
 
 .section-one .information_cart tr{
@@ -108,8 +134,52 @@ button:hover{
 
 
 select{
-    color: red;
+    color: rgb(8, 8, 8);
     border: 1px solid rgb(77, 224, 77);
     border-radius: 10px;
     height: 25px;
+}
+
+.order_button{
+    /* position: absolute;
+    top: 570px;
+    left: 465px; */
+    border: 1px solid rgb(45, 204, 58);
+    border-radius: 7px;
+    width: 150px;
+    color: rgb(5, 100, 34);
+    background: white;
+    cursor: pointer;
+    height: 30px;
+    padding : 5px;
+    
+}
+
+.order_button:hover{
+    border: 1px solid rgb(19, 0, 128);
+    background:#06a563;
+    color: rgb(245, 239, 239)
+}
+
+.order-list{
+    position: absolute;
+    top: 570px;
+    left: 465px;
+    border: 1px solid rgb(45, 204, 58);
+    border-radius: 7px;
+    width: 200px;
+    padding: 5px;
+    color: rgb(5, 100, 34);
+    background: white;
+    cursor: pointer;
+    
+}
+
+.order-list:hover{
+    border: 1px solid rgb(19, 0, 128);
+    background:#06a563;
+    color: rgb(245, 239, 239)
+}
+.order-list a:hover{
+    color: rgb(245, 239, 239);
 }
