--- a/FrontEnd/1_FrontEndOfAdmin/css/HomeAdmin.css
+++ b/FrontEnd/1_FrontEndOfAdmin/css/HomeAdmin.css
@@ -9,7 +9,7 @@ ul li{
 }
 
 .header{
-  display: flex;
+    display: flex;
     width: 100%;
     height: 60px;
     background-color: #2C3E50;
@@ -20,8 +20,14 @@ ul li{
     padding-left: 20px;
 }
 .header i{
-  margin-left: 100px;
+    margin-left: 100px;
     margin-right: 600px;
+}
+
+.accout{
+    color: orange;
+    margin-right: 20px;
+    cursor: pointer;
 }
 .section-one-content{
     display: flex;
